# ElectroBox

./: .gitignore  CMakeLists.txt  RADME-ptBr.md  README.md  colbat-core.sln  main.ts  start  tsconfig.json
_old_v8/: main.cpp
android/: args.gn
android/app/: CMakeLists.txt  build.gradle
android/app/src/androidTest/java/app/electrobox/com/electrobox/: ExampleInstrumentedTest.java
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/src/: WebGLRenderingContextConstants.h  native-lib.cpp
android/app/src/main/java/app/electrobox/com/electrobox/: GLJNIWrapper.java  MainActivity.java  RendererWrapper.java
android/app/src/main/res/values/: strings.xml
android/app/src/test/java/app/electrobox/com/electrobox/: ExampleUnitTest.java
android/gradle/wrapper/: gradle-wrapper.properties
android/lib/: args.gn
android/lib_dynamic_arm/: libicui18n.cr.so.TOC  libicuuc.cr.so.TOC  libv8.cr.so.TOC  libv8_libbase.cr.so.TOC  libv8_libplatform.cr.so.TOC  v8_hello_world
desktop-egl/: LICENSE  index.app.js
desktop-egl/src/: main.cpp
include/: V8Manager.h  WebGLRenderingContext.h  WebGLRenderingContextConstants.h  v8_bindings.h  v8_utils.h
linux/: CMakeLists.txt
msvc/: colbat-core.vcxproj  colbat-core.vcxproj.filters  index.js
msvc/x64/Debug/: colbat-core.ilk  index.js  vc140.idb
msvc/x64/Debug/colbat-core.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  colbat-core.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
src/: V8Manager.cpp  main.cpp  v8_binding_console.cpp  v8_utils.cpp
